--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #e7e7e7;
+  background-color: #cacaca;
   margin: 0%;
  
 }
@@ -33,14 +33,14 @@ body{
 
     .qtd{ 
       display: inline;
-      margin-left: 21.5%;
+      margin-left: 20.5%;
       
       font-size: 20px;
     }
 
     .preco{
       display: inline;
-      margin-left: 5.5%;
+      margin-left: 5.9%;
       font-size: 20px;
     }
 
