--- a/cssC/logcad.css
+++ b/cssC/logcad.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   font-family: arial;
-  background-color: #1b98e0;
+  background-color: #cacaca;
 }
 
 header{
@@ -23,14 +23,15 @@ header img{
   margin: auto;
   margin-top: 50px;
   margin-bottom: 50px;
-  border: 1px solid #13293d;
+  
   border-radius: 0.75em;
   width: 50%;
   padding: 50px;
-  background-color: #e8f1f2;
+  background-color: #fff;
 }
 
 div h3{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 30px;
   text-align: center;
   color: #13293d;
@@ -47,7 +48,7 @@ hr{
   margin-top: 6px;
   margin-bottom: 6px;
   padding: 10px;
-  border: 1px solid #e8f1f2;
+  border: 1px solid #cacaca;
   border-bottom: 1px solid #13293d;
   border-radius: 0,75em;
 }
@@ -84,24 +85,27 @@ label{
 }
 
 .btn-cadlog{
-  width: 40%;
-  padding: 6px;
+  width: 30%;
+  padding: 8px;
   margin-top: 8px;
   font-weight: bold;
-  border: 1px solid #247ba0;
-  border-radius: 0.35em;
+  border: none;
+  border-radius: 0.4em;
   background-color: #13293d;
   color: #e8f1f2;
   cursor: pointer;
 }
 
 .btn-cadlog:hover{
-  background-color: #006494;
+  background-color: #13293d;
+  -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+      transform: scale(1.3);
 }
 
 .cadlog{
   text-decoration: none;
-  color: #e8f1f2;
+  color: #13293d;
   font-weight: bold;
 }
 
@@ -109,6 +113,18 @@ label{
   color: #1b98e0;
   font-weight: bold;
 }
+
+.link-footer{
+  text-decoration: none;
+  color: #e8f1f2;
+  font-weight: bold;
+}
+
+.link-footer:hover{
+  color: #1b98e0;
+  font-weight: bold;
+}
+
 
 footer{
   background-color: #13293d;
@@ -170,3 +186,5 @@ ul input{
 @media only screen and(max-width: 600px){
 
 }
+
+
