--- a/estilo.css
+++ b/estilo.css
@@ -1,23 +1,32 @@
 body {
-  margin: 0;
-    /* background-color: #1b98e0; */
-    font-family: 'Noto Sans JP', sans-serif;
-   
+ margin: 0;
+font-family: 'Noto Sans JP', sans-serif;
+   background-color: #F8F8F8;
   }
   
   .background{
-    background-image: url(./img/imgfundo.jpg);
+    /* background-image: url(./img/imgfundo.jpg);
     background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    background-color: #F8F8F8;
     
   }
   
   
   .proorp{
+    margin-left: 35%;
+    width: 30%;
     padding: 2%;
     text-align: center;
     justify-items: center;
-    color: white;
+    color: #13293d;
+  }
+
+  .proorp h3{
+    border: 1px solid #13293d;
+    border-radius: 2em;
+    padding: 8%;
+    
   }
    
   .title{
@@ -43,9 +52,10 @@ body {
     padding: 2%;
     color: #e8f1f2;
     display: flex;
-    margin: 0;
+    margin-top: 10%;
   
   }
+   
   footer li{
     list-style-type: none;
     display: flex;
@@ -64,12 +74,15 @@ body {
   li a {
     display: block;
     color: white;
-    /* text-align: left; */
     padding: 15px;
     text-decoration: none;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif
   }
   
+  li a:hover:not(.active) {
+    color: #1b98e0;
+  }
   
   footer li{
     list-style-type: none;
@@ -123,6 +136,7 @@ body {
   .mySlides img{
     border-bottom: 2px solid #e8f1f2;
   }
+  
    
    
   li {
@@ -130,8 +144,7 @@ body {
   }
   .cadlog:hover{
     color: #1b98e0;
-    padding: 16.6px;
-    border-radius: 0.75em;
+
   }
   
   .cadlog-cl{
@@ -235,7 +248,7 @@ body {
       height: 15px;
       width: 15px;
       margin: 0 2px;
-      background-color: #e8f1f2;
+      background-color: #1b98e0;
       border-radius: 50%;
       display: inline-block;
       transition: background-color 0.6s ease;
@@ -259,12 +272,18 @@ body {
       margin-top: -6px;
       
     }
+
+    .activec img:hover{
+      -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+      transform: scale(1.3);
+    }
     
     .fade {
       -webkit-animation-name: fade;
       -webkit-animation-duration: 1.5s;
       animation-name: fade;
-      animation-duration: 1.5s;
+      animation-duration: 5s;
     }
     
     @-webkit-keyframes fade {
@@ -378,9 +397,9 @@ body {
     }
     
     .card__title {
-      font-size: 1em;
+      font-size: 1.1em;
       margin: 0 0 .3em;
-      color: white;
+      color: #e8f1f2;
     }
     
     .card__tagline {
@@ -388,24 +407,58 @@ body {
       margin: 1em 0;
       font-family: "MockFlowFont";  
       font-size: .8em; 
-      color: white;
+      color: #e8f1f2;
     }
     
     .card__status {
-      font-size: .8em;
-      color: white;
+
+      font-size: 20px;
+      color: #e8f1f2;
     }
     
     .card__description {
       padding: 0 2em 2em;
       margin: 0;
       color: #e8f1f2;
+      font-size: 15px;
       background-color: #13293d;
-      font-family: "MockFlowFont";   
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
       display: -webkit-box;
       -webkit-box-orient: vertical;
       -webkit-line-clamp: 3;
       overflow: hidden;
       
-    }   
+    } 
+    
+    
+  .redes-master{
+    width: 40px;
+    margin-top: -15%;
+    margin-left: 20px;
+    
+  }
+    
+  .redes{
+    margin-top: -20%;
+    width: 40px;
+  }
+
+  .redes-master:hover{
+    -webkit-transform: scale(0.8);
+        -ms-transform: scale(0.8);
+        transform: scale(0.8);
+  }
+
+  .redes:hover{
+    -webkit-transform: scale(0.8);
+        -ms-transform: scale(0.8);
+        transform: scale(0.8);
+  }
+
+  .pag{
+    margin-left: 4%;
+    width: 30%;
+    margin-top: -1%;
+  }
+   
   
