--- a/produto.css
+++ b/produto.css
@@ -16,43 +16,21 @@ body {
     }
     
     .icon{
+      display: none;
       width: 60%;
     }
     
      
      
-    footer{
-      background-color: #13293d;
-      border-top: 2px solid #e8f1f2;
-      padding: 2%;
-      color: #e8f1f2;
-      display: flex;
-      margin: 0;
-    
-    }
-    footer li{
-      list-style-type: none;
-      display: flex;
+    .activec img:hover{
+      -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+      transform: scale(1.3);
     }
     
-    .pay{
-        width: 50%;
-      margin-left: 30px;
     
-    }
+  
     
-    .pagamentos{
-      width: 100%;
-      margin-top: 20px;
-    }
-    li a {
-      display: block;
-      color: white;
-      /* text-align: left; */
-      padding: 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
     
     
 .navegador{
@@ -208,6 +186,17 @@ body {
         border: 1px solid #13293d;
     }
 
+    .hr-footer{
+      height: 45px;
+      border: 1px solid #e8f1f2;
+    }
+
+    .pag{
+      margin-left: 4%;
+      width: 30%;
+      
+    }
+
     .description{
       width: 90%;
       margin-right: 5%;
@@ -270,38 +259,8 @@ body {
 
     
     
-    li {
-      float: left;
-    }
-    .cadlog:hover{
-      color: #1b98e0;
-      padding: 16.6px;
-      border-radius: 0.75em;
-    }
-    
-    .cadlog-cl{
-      margin-right: 6px;
-    
-    }
-    
-    .cadlog-cl:hover{
-      color:  #1b98e0;
-      padding: 16.6px;
-      border-radius: 0.75em;
-    }
      
-     
-    
-    li a {
-      display: block;
-      color: white;
-      /* text-align: left; */
-      padding: 15px;
-      text-decoration: none;
-      font-weight: bold;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-     
+  
      
      
     header{
@@ -425,3 +384,182 @@ body {
     #sapatilharacing3{
       width: 80%;
     }
+
+    #capacetemoto1{
+      width: 90%;
+    }
+
+    #capacetemoto2{
+      width: 90%;
+    }
+
+    #capacetemoto3{
+      width: 80%;
+    }
+
+    #macacaomoto1{
+      width: 55%;
+      margin-top: -5%;
+    }
+
+    #macacaomoto2{
+      width: 65%;
+    }
+
+    #luvamoto1{
+      width: 75%;
+    }
+    
+    #luvamoto2{
+      width: 85%;
+    }
+
+    #luvamoto3{
+      width: 100%;
+    }
+
+    #botamoto1{
+      width: 80%;
+    }
+
+    #botamoto2{
+      width: 90%;
+    }
+
+    #botamoto3{
+      width: 80%
+    }
+
+    #capacetekart1{
+      width: 85%;
+    }
+
+    #capacetekart2{
+      width: 90%;
+    }
+
+    #capacetekart3{
+      width: 85%;
+    }
+
+    #macacaokart1{
+      width: 70%;
+    }
+    
+    #macacaokart2{
+      width: 95%;
+    }
+
+    #macacaokart3{
+      width: 100%;
+    }
+
+    #luvakart1{
+      width: 90%;
+    }
+    #luvakart2{
+      width: 90%
+    }
+    #luvakart3{
+      width: 90%
+    }
+
+    #sapatilhakart1{
+      width: 90%
+    }
+    #sapatilhakart2{
+      width: 90%
+    }
+    #sapatilhakart3{
+      width: 100%
+    }
+
+    /* FOOTER */
+
+    footer{
+      background-color: #13293d;
+      border-top: 2px solid #e8f1f2;
+      padding: 2%;
+      color: #e8f1f2;
+      display: flex;
+      margin-top: 10%;
+    
+    }
+     
+    footer li{
+      list-style-type: none;
+      display: flex;
+    }
+
+    ul input{
+      float: center;
+      padding: 6px 10px;
+      margin-top: 8px;
+      margin-right: 16px;
+      background: #ddd;
+      font-size: 17px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .redes-master{
+      width: 40px;
+      margin-top: -15%;
+      
+      
+    }
+      
+    .redes{
+      margin-top: -20%;
+      width: 40px;
+    }
+  
+    .redes-master:hover{
+      -webkit-transform: scale(0.8);
+          -ms-transform: scale(0.8);
+          transform: scale(0.8);
+    }
+  
+    .redes:hover{
+      -webkit-transform: scale(0.8);
+          -ms-transform: scale(0.8);
+          transform: scale(0.8);
+    }
+
+    li a {
+      display: block;
+      color: white;
+      padding: 15px;
+      text-decoration: none;
+      font-weight: bold;
+      font-family: Arial, Helvetica, sans-serif
+    }
+    
+    li a:hover:not(.active) {
+      color: #1b98e0;
+    }
+
+    li {
+      float: left;
+    }
+    .cadlog:hover{
+      color: #1b98e0;
+  
+    }
+    
+    .cadlog-cl{
+      margin-right: 6px;
+    
+    }
+    
+    .cadlog-cl:hover{
+      color:  #1b98e0;
+      padding: 16.6px;
+      border-radius: 0.75em;
+    }
+     
+   
+   
+    
+  
+   
