--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -33,14 +33,20 @@ body{
 
     .qtd{ 
       display: inline;
-      margin-left: 20.5%;
+      margin-left: 12%;
       
+      font-size: 20px;
+    }
+
+    .tamanho{
+      display: inline;
+      margin-left: 2.6%;
       font-size: 20px;
     }
 
     .preco{
       display: inline;
-      margin-left: 5.9%;
+      margin-left: 10.3%;
       font-size: 20px;
     }
 
@@ -102,7 +108,7 @@ body{
       padding: 2%;
       color: #e8f1f2;
       display: flex;
-      margin-top: 50%;
+      margin-top: 20%;
     
     }
      
@@ -110,7 +116,85 @@ body{
       list-style-type: none;
       display: flex;
     }
+
+    ul input{
+      float: center;
+      padding: 6px 10px;
+      margin-top: 8px;
+      margin-right: 16px;
+      background: #ddd;
+      font-size: 17px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .redes-master{
+      width: 40px;
+      margin-top: -15%;
+      
+      
+    }
+      
+    .redes{
+      margin-top: -20%;
+      width: 40px;
+    }
   
+    .redes-master:hover{
+      -webkit-transform: scale(0.8);
+          -ms-transform: scale(0.8);
+          transform: scale(0.8);
+    }
+  
+    .redes:hover{
+      -webkit-transform: scale(0.8);
+          -ms-transform: scale(0.8);
+          transform: scale(0.8);
+    }
+
+    li a {
+      display: block;
+      color: white;
+      padding: 15px;
+      text-decoration: none;
+      font-weight: bold;
+      font-family: Arial, Helvetica, sans-serif
+    }
+    
+    li a:hover:not(.active) {
+      color: #1b98e0;
+    }
+
+    li {
+      float: left;
+    }
+    .cadlog:hover{
+      color: #1b98e0;
+  
+    }
+    
+    .cadlog-cl{
+      margin-right: 6px;
+    
+    }
+
+    .hr-footer{
+      height: 45px;
+      border: 1px solid #e8f1f2;
+    }
+
+    .pag{
+      margin-left: 4%;
+      width: 30%;
+      
+    }
+    
+    .cadlog-cl:hover{
+      color:  #1b98e0;
+      padding: 16.6px;
+      border-radius: 0.75em;
+    }
+     
 
   .navegador-pgs{
     border-bottom: 2px solid #e8f1f2;
@@ -142,18 +226,7 @@ body{
     cursor: pointer;
   } */
   
-  li a {
-    display: block;
-    color: white;
-    padding: 15px;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif
-  }
   
-  li a:hover:not(.active) {
-    color: #1b98e0;
-  }
   
   
  
@@ -309,12 +382,12 @@ height: 50%;
         padding: 10px;
     }
 
-    button{
+    .btn-remove{
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-size: 14px;
       color: #fff;
       background-color: #ff1b1b;
-      width: 50%;
+      width: 75%;
       padding: 8%;
       border: 1px solid #13293d;
       border-radius: 8px;
@@ -322,11 +395,28 @@ height: 50%;
       
     }
 
-    button:hover{
+    .btn-remove:hover{
       background-color: rgb(255, 0, 0);
-      -webkit-transform: scale(1.3);
-      -ms-transform: scale(1.3);
-      transform: scale(1.3);
+      
+    }
+
+    .btn-class{
+      border: none;
+      color: #fff;
+      border-radius: 8px;
+      background-color: #1b98e0;
+      font-size: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      margin-top: 8px;
+      margin-left: 65%;
+      width: 30%;
+      padding: 20px;
+      cursor: pointer;
+
+    }
+
+    .btn-class:hover{
+      background-color: #13293d;
     }
 
 
