--- a/estilo.css
+++ b/estilo.css
@@ -23,10 +23,10 @@ font-family: 'Noto Sans JP', sans-serif;
   }
 
   .proorp h3{
-    border: 1px solid #13293d;
+    /* border: 1px solid #13293d; */
     border-radius: 2em;
     padding: 8%;
-    
+    font-size: 40px;
   }
    
   .title{
@@ -41,7 +41,7 @@ font-family: 'Noto Sans JP', sans-serif;
   }
   
   .icon{
-    display: none;
+    /* display: none; */
     width: 60%;
   }
   
@@ -374,7 +374,7 @@ font-family: 'Noto Sans JP', sans-serif;
     
     .card__arc path {
       fill: #050309;
-      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+      display: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
     }       
     
     .card:hover .card__header {
